crates/ruff_python_trivia_integration_tests/tests/snapshots/simple_tokenizer__tokenize_comma.snap
---
source: crates/ruff_python_trivia_integration_tests/tests/simple_tokenizer.rs
expression: test_case.tokens()
snapshot_kind: text
---
[
    SimpleToken {
        kind: Comma,
        range: 0..1,
    },
    SimpleToken {
        kind: Comma,
        range: 1..2,
    },
    SimpleToken {
        kind: Comma,
        range: 2..3,
    },
    SimpleToken {
        kind: Comma,
        range: 3..4,
    },
]
