crates/ruff_python_trivia_integration_tests/tests/snapshots/simple_tokenizer__tokenize_eq.snap
---
source: crates/ruff_python_trivia_integration_tests/tests/simple_tokenizer.rs
expression: test_case.tokens()
snapshot_kind: text
---
[
    SimpleToken {
        kind: EqEqual,
        range: 0..2,
    },
    SimpleToken {
        kind: Equals,
        range: 2..3,
    },
]
