crates/ruff_python_trivia_integration_tests/tests/snapshots/simple_tokenizer__tokenize_operators.snap
---
source: crates/ruff_python_trivia_integration_tests/tests/simple_tokenizer.rs
expression: test_case.tokens()
snapshot_kind: text
---
[
    SimpleToken {
        kind: RArrow,
        range: 0..2,
    },
    SimpleToken {
        kind: Whitespace,
        range: 2..3,
    },
    SimpleToken {
        kind: StarEqual,
        range: 3..5,
    },
    SimpleToken {
        kind: Whitespace,
        range: 5..6,
    },
    SimpleToken {
        kind: LParen,
        range: 6..7,
    },
    SimpleToken {
        kind: Whitespace,
        range: 7..8,
    },
    SimpleToken {
        kind: MinusEqual,
        range: 8..10,
    },
    SimpleToken {
        kind: Whitespace,
        range: 10..11,
    },
    SimpleToken {
        kind: RParen,
        range: 11..12,
    },
    SimpleToken {
        kind: Whitespace,
        range: 12..13,
    },
    SimpleToken {
        kind: Tilde,
        range: 13..14,
    },
    SimpleToken {
        kind: Whitespace,
        range: 14..15,
    },
    SimpleToken {
        kind: DoubleSlash,
        range: 15..17,
    },
    SimpleToken {
        kind: Whitespace,
        range: 17..18,
    },
    SimpleToken {
        kind: DoubleStar,
        range: 18..20,
    },
    SimpleToken {
        kind: Whitespace,
        range: 20..21,
    },
    SimpleToken {
        kind: DoubleStarEqual,
        range: 21..24,
    },
    SimpleToken {
        kind: Whitespace,
        range: 24..25,
    },
    SimpleToken {
        kind: Circumflex,
        range: 25..26,
    },
    SimpleToken {
        kind: Whitespace,
        range: 26..27,
    },
    SimpleToken {
        kind: CircumflexEqual,
        range: 27..29,
    },
    SimpleToken {
        kind: Whitespace,
        range: 29..30,
    },
    SimpleToken {
        kind: Vbar,
        range: 30..31,
    },
    SimpleToken {
        kind: Whitespace,
        range: 31..32,
    },
    SimpleToken {
        kind: VbarEqual,
        range: 32..34,
    },
]
